Renaming things to a more neutral PackageReference thing as NuPack is choosing a new name

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Will bring the needed bits from my fork on the Apache Licensed NuPack project (http://nupack.codeplex.com/SourceControl/network/Forks/monoman/KnowingNuPack) to here.
+Nupack bits come from my fork on the Apache Licensed NuPack project (http://nupack.codeplex.com/SourceControl/network/Forks/monoman/KnowingNuPack) to here.
 
 This addin for MonoDevelop will be Apache Licensed as well. I think this is compatible with both projects' licenses.
 
